test: remove "public" modifier from test classes and methods (JUnit 5)
Closes #175